--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite-plugin-elm": "^2.8.0-beta.3"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "tone": "^14.7.77"
   }
 }
